# nas-reader

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  CODESTYLE.md  README.md  analysis.md  docker-compose.hub.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  20260717_add_comic_double_page.py  20260720_add_app_settings.py  a1b2c3d4e5f6_add_word_count_and_sort_keys.py  d4c35787e379_initial_sqlite_schema.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  books.py  reading_settings.py  scrape.py  search.py  settings.py  shelves.py  sources.py  users.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  book.py  reading.py  setting.py  source.py  user.py
backend/app/schemas/: auth.py  book.py  scrape.py  source.py
backend/app/services/: book_query.py  permission.py  permission_service.py  settings_store.py  shelf.py  sortkey.py  tasks.py
backend/app/services/metadata/: base.py  douban.py  google.py  openlibrary.py  scraper.py
backend/app/services/parsers/: base.py  comic.py  epub.py  mobi.py  pdf.py  registry.py  txt.py
backend/app/services/scanner/: covers.py  fsutil.py  scan.py
frontend/: Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.vue  constants.ts  main.ts  (+1 more)
(+32 files in other folders)
